sema/testdata/gcc-c99-extra/accept/inline-11.c
inline int a;
inline int (*b)(void);
typedef inline void c(void);
typedef inline int d;
void e(inline int f(void));
void g(inline int(void));
