sema/testdata/gcc-c99-extra/reject/gnu-cond-expr-3.c
int a, b, c;

void
f (void)
{
  c = (++a ? : b);
}
